...
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/search_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:focusable="false"
                android:focusableInTouchMode="false"
...
                app:srcCompat="@drawable/search_24px" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.kakao.vectormap.MapView
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </com.kakao.vectormap.MapView>

    <include
...
