...
        android:layout_margin="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp">

        <EditText
            android:id="@+id/searchInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/search_input_hint"
            android:inputType="text" />
...
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/searchBar"
        tools:listitem="@layout/search_history_module" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/placesRView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchHistory"
        tools:listitem="@layout/place_module" />
...
